--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo/vector-icons": "^14.0.0",
-    "expo": "~50.0.7",
+    "expo": "~50.0.8",
     "expo-barcode-scanner": "~12.9.3",
     "expo-blur": "~12.9.2",
     "expo-camera": "~14.0.5",
@@ -21,7 +21,9 @@
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-size-matters": "^0.4.2",
-    "expo-clipboard": "~5.0.1"
+    "expo-clipboard": "~5.0.1",
+    "lottie-react-native": "6.5.1",
+    "expo-constants": "~15.4.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
